# github-issue

./: Cargo.toml  Makefile  README.md
.github/workflows/: periodic.yml  release.yml
src/: cli.rs  formatter.rs  github_client.rs  main.rs
tests/: github-issue.rs
