[package]
name = "github-issue"
version = "0.1.0"
authors = ["qwyng <ikusawasi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

[dependencies.reqwest]
version = "0.10.0"
features = ["blocking"]
